# multi_modal_rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes_chat.py  routes_core_services.py
app/core/: config.py
app/core_services/chunking/: default_chunker.py
app/core_services/embeddings/: cohere_embeddings.py
app/core_services/file_parsers/: __init__.py  pdf_highlighter.py  pdf_parser.py
app/core_services/ingestion/: __init__.py  document_ingestion.py
app/core_services/llm_clients/: cohere_llm.py  groq_llm.py  llm_factory.py
app/core_services/rerankers/: cohere_reranker.py
app/core_services/storage/: temp_file__store.py
app/core_services/vectorstores/: pinecone_client.py
app/response_generation/: multimodal_generator.py  text_generator.py
app/retrieval/: pipeline.py
app/schemas/: chunking.py  embeddings.py  ingestion.py  llm.py  pdf.py  rag.py  reranker.py  vectorstore.py
app/utils/: files.py
frontend/: config.js  insightai-main.html
