[project]
name = "multi-modal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "pillow>=12.1.0",
    "pinecone>=8.0.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.9",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
